# pan-vaccine-innate-memory

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
resources/: tf_families.json  tf_family_palette.json
resources/gene_sets/: README.md
src/panvaxmem/atac_analysis/chromvar/: compute_DAMs.py  longitudinal_model.py  run_chromvar.R
src/panvaxmem/atac_analysis/chromvar/plotting/: plot_cm_volcano.py
src/panvaxmem/atac_analysis/dars/: run_poisson_regression.py
src/panvaxmem/atac_analysis/dars/outputs/: README.md  h5n1_adj  h5n1_nadj  pfzr  shx  tiv  yfv
src/panvaxmem/bone_marrow_analysis/: call_clones.R  clonal_heterogeneity.py  compute_DAMs.py
src/panvaxmem/cellxgene_analysis/: 00-download_scvi_embeddings.py  01-build_faiss_index.py  02-compute_enrichments.ipynb  03-plot_heatmaps.ipynb
src/panvaxmem/functional_analysis/dengue_infection/: compute_correlations.py  compute_density_per_sample.py  dataset_utils.py
src/panvaxmem/functional_analysis/tlr_stimulation/: compute_correlations.py  compute_density_per_sample.py  dataset_utils.py
src/panvaxmem/functional_analysis/utils/: correlations.py  density.py  sample_metadata.py
src/panvaxmem/integration/: run_hotspot.py  train_mrvi.py
src/panvaxmem/integration/outputs/hotspot/: README.md  gene_results.csv  module_scores.csv
src/panvaxmem/preprocessing/sc/: README.md
src/panvaxmem/rna_analysis/: create_combined_fgsea_tables.py  run_fgsea.R  run_scvi_de.py
src/panvaxmem/rna_analysis/plotting/: plot_fgsea_dot_heatmap.R
src/panvaxmem/utils/: dot_heatmap.R
(+44 files in other folders)
